--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -18,10 +18,12 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Set up Java version
-        uses: actions/setup-java@v2.3.1
+        uses: actions/setup-java@v2.4.0
         with:
           java-version: ${{ env.JAVA_VERSION }}
           cache: 'maven'
+          distribution: jdk
+
 
       - name: Build with Maven
         run: mvn clean install
