--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -22,8 +22,7 @@ jobs:
         with:
           java-version: ${{ env.JAVA_VERSION }}
           cache: 'maven'
-          distribution: jdk
-
+          distribution: 'temurin'
 
       - name: Build with Maven
         run: mvn clean install
