--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -2,7 +2,7 @@ name: Build and deploy JAR
 
 env:
   AZURE_WEBAPP_NAME: your-app-name
-  JAVA_VERSION: '11'
+  JAVA_VERSION: '8'
 
 on:
   push:
@@ -22,7 +22,7 @@ jobs:
         with:
           java-version: ${{ env.JAVA_VERSION }}
           cache: 'maven'
-          distribution: 'temurin'
+          distribution: 'liberica'
 
       - name: Build with Maven
         run: mvn clean install
