--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -25,7 +25,7 @@ jobs:
           distribution: 'liberica'
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn clean install -Dskip_tests
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
